# huggingface-streamlit-demo

./: app.py
desi-meme-center-jahnavi/: .gitignore  CHANGELOG.MD  CONTRIBUTING.md  LICENSE  Procfile  README.md  package.json  pyproject.toml
desi-meme-center-jahnavi/.gitlab/issue_templates/: Bug Report.md  Dialect Addition.md  Feature Request.md  UI Feedback.md
desi-meme-center-jahnavi/.gitlab/merge_request_templates/: Default_MR.md
desi-meme-center-jahnavi/code/: Layout.js
desi-meme-center-jahnavi/code/Entities/: Meme.sql  MemeTemplate.sql
desi-meme-center-jahnavi/code/Pages/: CreateMeme.jsx  Home.jsx  Leaderboard.jsx  Profile.jsx
