[project]
name = "desi-meme-center"
version = "0.1.0"
description = "Telugu Meme Remix / Desi Meme Center — full-stack meme hub."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
authors = [
  { name = "Desi Meme Center Contributors" }
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E","F","I","UP"]
fix = true
